# Embedded_Console

./: README.md
Libary/debugf_vcp/: debugf_vcp.c  debugf_vcp.h
Python Console (PC)/: colored_terminal.py  console.py
doc/pic/: .$overview_uml.drawio.bkp  overview_uml.drawio
firmware-mcu/: .gitignore  CMakeLists.txt
firmware-mcu/.cache/clangd/index/: Console.cpp.75249DDDF74BEB30.idx  Console.h.75FC34148CF7B1FA.idx  ConsoleCore.cpp.56D15B05F0EC8AF6.idx  IStream.h.15C05A36FCA50579.idx
firmware-mcu/examples/STM32/: StreamStmUart.h  jumpToBootloader.cpp
firmware-mcu/examples/STM32/USB_VCP/: STM32StreamVCP.cpp  STM32StreamVCP.h  StreamUSB.h
firmware-mcu/include/: Console.h  IStream.h  StreamArduino.h  StreamStmUSB.h
firmware-mcu/include/streams/: Arduino_univeralStream.h  StreamStmUSB.h
firmware-mcu/src/: Console.cpp  ConsoleCore.cpp
firmware-mcu/vcp_console_old/: vcp_console.c
host-console/: console.py
